ubah judul tabel tahun bulan hari ke format yang bener

--- a/views/tugas-mhs.html
+++ b/views/tugas-mhs.html
@@ -271,7 +271,7 @@ body.dark-theme .border-gray-200 {
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Mata Kuliah</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Nama Tugas</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Url Gambar</th> 
-                        <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Deadline<br>Tahun-Bulan-Tanggal</th>
+                        <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Deadline<br>YYYY-MM-DD</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Kelompok</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">VClass</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Praktikum</th>
