--- a/views/table-mhs.html
+++ b/views/table-mhs.html
@@ -215,7 +215,7 @@ body.dark-theme .border-gray-200 {
                     <tr class="bg-gray-200 text-gray-600 uppercase text-xs sm:text-sm leading-normal">
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Mata Kuliah</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Nama Tugas</th>
-                        <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Deadline<br>Tahun-Bulan-Tanggal</th>
+                        <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Deadline<br>YYYY-MM-DD</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Kelompok</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">VClass</th>
                         <th class="py-2 px-4 sm:py-3 sm:px-6 text-left">Praktikum</th>
