--- a/views/index.html
+++ b/views/index.html
@@ -467,7 +467,7 @@
 <body>
 
     <div class="background-container">
-        <img src="./background/background2.png" alt="Background" class="background-image">
+        <img src="./background/background2.webp" alt="Background" class="background-image">
     </div>
 
     <div id="splash">
