update sessions token login, logout

--- a/views/index.html
+++ b/views/index.html
@@ -515,7 +515,7 @@
                         <td>1</td>
                         <td>Tugas Mahasiswa</td>
                         <td>
-                            <button class="btn btn-try" onclick="tryApi('/login')">Tambah Data</button>
+                            <button class="btn btn-try" onclick="tryApi('/tugas-mahasiswa')">Tambah Data</button>
                         </td>
                         <td>
                             <button class="btn btn-try" onclick="tryApi('/table-mhs')">Cek Table</button>
@@ -524,21 +524,21 @@
                             <button class="btn btn-try" onclick="tryApi('/tugas/mahasiswa')">GET</button>
                         </td>
                     </tr>
+<!--                    <tr>-->
+<!--                        <td>2</td>-->
+<!--                        <td>Status Dosen</td>-->
+<!--                        <td>-->
+<!--                            <button class="btn btn-try" onclick="tryApi('/logindosen')">Tambah Data</button>-->
+<!--                        </td>-->
+<!--                        <td>-->
+<!--                            <button class="btn btn-try" onclick="tryApi('/table-dosen')">Cek Table</button>-->
+<!--                        </td>-->
+<!--                        <td>-->
+<!--                            <button class="btn btn-try" onclick="tryApi('/tugas/Dosen')">GET</button>-->
+<!--                        </td>-->
+<!--                    </tr>-->
                     <tr>
                         <td>2</td>
-                        <td>Status Dosen</td>
-                        <td>
-                            <button class="btn btn-try" onclick="tryApi('/logindosen')">Tambah Data</button>
-                        </td>
-                        <td>
-                            <button class="btn btn-try" onclick="tryApi('/table-dosen')">Cek Table</button>
-                        </td>
-                        <td>
-                            <button class="btn btn-try" onclick="tryApi('/tugas/Dosen')">GET</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
                         <td>Kalender Tugas</td>
                         <td>
                             <button class="btn btn-try" onclick="tryApi('/kalenderTugas')">Cek Tugas</button>
@@ -551,16 +551,16 @@
 
 
 
-       
 
-    
+
+
         <!-- <div style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap; margin-top: 2rem;">
             <img src="./logo/docker.svg" alt="Docker Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="100">
             <img src="./logo/intel.svg" alt="Intel Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="200">
             <img src="./logo/javascript.svg" alt="JavaScript Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="300">
             <img src="./logo/nodedotjs.svg" alt="nodedotjs Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="400">
             <img src="./logo/npm.svg" alt="npm Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="500">
-            <img src="./logo/termius.svg" alt="termius Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="600"> 
+            <img src="./logo/termius.svg" alt="termius Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="600">
             <img src="./logo/github.svg" alt="github Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="600">
             <img src="./logo/pm2.svg" alt="pm2 Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="600">
             <img src="./logo/cloudflare.svg" alt="cloudflare Logo" style="width: 100px; height: auto;" data-aos="fade-up" data-aos-delay="600">
