--- a/views/login.html
+++ b/views/login.html
@@ -196,11 +196,11 @@
     </div>
 
     <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-sm login-card">
-        <h1 class="text-xl font-bold mb-4 text-center">LOGIN TUGAS</h1>
+        <h1 class="text-xl font-bold mb-4 text-center">LOGIN MANAJEMEN TUGAS</h1>
         <form id="loginForm">
             <div class="mb-4">
                 <label for="npm" class="block text-sm font-medium">Masukan Pin:</label>
-                <input type="text" id="npm" required class="mt-1 block w-full border rounded-md shadow-sm focus:ring focus:ring-blue-500">
+                <input type="password" id="npm" required class="mt-1 block w-full border rounded-md shadow-sm focus:ring focus:ring-blue-500">
             </div>
             <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600">Login</button>
         </form>
