--- a/views/protected/tugas-dosen.html
+++ b/views/protected/tugas-dosen.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="./img/splash1.png">
+    <link rel="icon" href="../img/splash1.png">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
