--- a/views/table-mhs.html
+++ b/views/table-mhs.html
@@ -166,6 +166,12 @@ body.dark-theme .border-gray-200 {
             <span class="slider" aria-hidden="true"></span>
         </label>
     </div>
+   <button>
+    <a href="/" 
+   class="ml-2 mt-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 shadow-md text-sm rounded-md inline-block">
+    Kembali
+</a>
+   </button>
     <div class="w-full max-w-full mx-auto p-4 sm:p-6 lg:p-8 bg-white rounded-lg shadow-md">
         <h1 class="text-xl sm:text-2xl lg:text-3xl font-bold mb-4 text-center">Manajemen Tugas Mahasiswa</h1>
         <div class="mb-4 text-center">
@@ -249,7 +255,7 @@ body.dark-theme .border-gray-200 {
 
         
         function Login(endpoint) {
-            window.open(endpoint, '_blank');
+            window.open(endpoint);
         }
 
         const tugasList = document.getElementById('tugasList');
