--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rest API | AQUKIN</title>
+    <title>3KA14 TUGAS MANAGEMENT</title>
     <meta name="author" content="Dana Putra">
-    <meta name="description" content="Free Rest Api-scraper">
+    <meta name="description" content="3KA14 Tugas Management Web">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="icon" href="./img/splash1.png">
